refactor: reuse MIN_DISTANCE constant & simplify